tests/typechecker/should_fail/type_annotations_8.csp
f :: (Int) -> (Int) -> Int
f(x) = x
